traffic-management/route-headers/frontend-vs-route-headers.yml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: garage-frontend-service
  namespace: garage-namespace
spec:
  hosts:
  - "*"
  gateways:
  - garage-gateway
  http:
  - match:
    - headers:
        user-agent:
          regex: '.*Firefox.*'
    route:
    - destination:
        host: garage-frontend-service
        subset: v1

  - route:
    - destination:
        host: garage-frontend-service
        subset: v2

---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: garage-frontend-service
  namespace: garage-namespace
spec:
  host: garage-frontend-service
  subsets:
    - name: v1
      labels:
        version: v1
        
    - name: v2
      labels:
        version: v2
